--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 mpi = { version = "0.8.0", features = [] }
-ollama-rs = "0.3.1"
-tokio = { version = "1.44.2", features = ["full"] }
+ollama-rs = { version = "0.3.1", default-features = false }
+tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
