--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.98"
 arrow = "55.0.0"
 arrow-array = "55.0.0"
 arrow-schema = "55.0.0"
@@ -12,9 +11,10 @@ mpi = { version = "0.8.0", features = [] }
 ndarray = "0.16.1"
 ollama-rs = { version = "0.3.1", default-features = false }
 parquet = {version = "55.0.0", features = ["arrow"] }
-polars = { version = "0.46.0", features = ["ndarray", "parquet"] }
+polars = { version = "0.47.0", features = ["ndarray", "parquet", "lazy", "dtype-array"] }
 tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "io-util"] }
 walkdir = "2.5.0"
 
 [dev-dependencies]
+rand = "0.9.1"
 tempfile = "3.8.1"
