--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ arrow-array = "55.0.0"
 arrow-schema = "55.0.0"
 mpi = { version = "0.8.0", features = [] }
 ndarray = "0.16.1"
-ollama-rs = { version = "0.3.1", default-features = false }
-ort = "=2.0.0-rc.9"
+ort = {version = "=2.0.0-rc.9", features = ["download-binaries"] }
 parquet = {version = "55.0.0", features = ["arrow"] }
 polars = { version = "=0.47.0", features = ["ndarray", "parquet", "lazy", "dtype-array", "streaming"] }
 tokenizers = "0.21.1"
